Fix jumping and clipping when share transitions

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -173,15 +173,17 @@
   }
 
   .share-transition {
-    height: 0px !important;
+    height: 2px !important;
+    visibility: hidden;
   }
 
   .share {
+    visibility: visible;
     height: 130px;
     transition: height 200ms;
+    background-color: #fbfbfb;
     width: 550px;
-    border: 1px solid black;
-    background-color: white;
+    border: 1px solid #e2e2e2;
     overflow: hidden;
   }
 }
